--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -3,14 +3,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{{template "title" .}} - Snippetbox</title>
+        <title>{{template "title" .}} - قطرة حبر</title>
         <link rel="stylesheet" href="/static/css/main.css">
         <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700">
+        <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1><a href="/">Snippetbox</a></h1>
+            <h1><a href="/">قطرة حبر</a></h1>
         </header>
         {{template "nav" .}}
         <main>
