--- a/ui/html/pages/home.tmpl
+++ b/ui/html/pages/home.tmpl
@@ -1,6 +1,6 @@
-{{define "title"}}Home{{end}}
+{{define "title"}}الرئيسية{{end}}
 
 {{define "main"}}
-    <h2>Latest Snippets</h2>
+    <h2>أحدث القطرات</h2>
     <p>There's nothing to see here yet!</p>
 {{end}}
