--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,6 +1,6 @@
 {{define "nav"}}
 <nav>
     <a href="/">الرئيسية</a>
-    <a href="/snippet/create">Create snippet</a>
+    <a href="/snippet/create">قطرة جديدة</a>
 </nav>
 {{end}}
