--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -1,6 +1,15 @@
 {{define "nav"}}
 <nav>
-    <a href="/">الرئيسية</a>
-    <a href="/snippet/create">قطرة جديدة</a>
+    <div>
+        <a href="/">الرئيسية</a>
+        <a href="/snippet/create">قطرة جديدة</a>
+    </div>
+    <div>
+        <a href="/user/signup">Signup</a>
+        <a href="/user/login">Login</a>
+        <form action="/user/logout" method="POST">
+            <button>Logout</button>
+        </form>
+    </div>
 </nav>
 {{end}}
