--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -135,7 +135,33 @@ nav a:hover {
 
 nav form {
     display: inline-block;
-    margin-left: 1.5rem;
+    margin: 0;
+}
+
+/* Make nav buttons look like links */
+nav form button {
+    background: none;
+    border: none;
+    padding: 0;
+    font: inherit;
+    color: #5c4328;
+    font-weight: bold;
+    cursor: pointer;
+    display: inline-block;
+    margin-left: 1em;
+    vertical-align: middle;
+}
+
+nav a,
+nav form button {
+    vertical-align: middle;
+    line-height: 1;
+}
+
+/* Match hover style */
+nav form button:hover {
+    color: #8a6d3b;
+    text-decoration: underline;
 }
 
 nav div {
